Making the tests compile on Java 8, but run on Java 22 or newer.